3.34.5
======
Apr 6, 2023
- Refactored string interpolation
- Improved error reporting in CSV lookup DSL
- Improved Examples annotation CSV processing and error reporting

3.34.4
======
Mar 28, 2023
- Fix StepDef parameter interpolation checks in dry runs

3.34.3
======
Mar 27, 2023
- Log warning and return code 1 if context fails to close on exit

3.34.2
======
Mar 27, 2023
- Allow all interrupts resulting from cntl-c to exit REPL quietly

3.34.1
======
Mar 27, 2023
- Only load Gwen banner a second time when starting REPL if in verbose mode or evaluation occured on features
- Fix launch issue where no meta or feature files are provided
- Allow cntl-c to exit REPL quietly

3.34.0
======
Mar 25, 2023
- Introduce auto suggestions in the REPL console
- Introduce new settings to enable or disable auto suggestions and tab completion
  - `gwen.console.repl.autoSuggestions=true|false` (default is true for enabled)
  - `gwen.console.repl.tabCompletion=true|false` (default is true for enabled)

3.33.4
======
Mar 25, 2023
- Do not escape inputs in REPL
- Smaller StepDef indents in HTML reports
  - New default of 20 pixels for `gwen.report.stepDef.indent.pixels` setting

3.33.3
======
Mar 21, 2023
- Allow cntl-d to exit REPL quietly

3.33.2
======
Mar 18, 2023
- Fix environment variable overrides for Settings
- Do no load Gwen banner a second time when starting REPL and loading meta unless verbose logging is enabled
- Use SpecPrinter to print step on breakpoints

3.33.1
======
Mar 16, 2023
- Relax strict and declarative rules when in REPL

3.33.0
======
Mar 15, 2023
- Bind implicit `gwen.stepDef.name` attribute to the currently executing StepDef name

3.32.0
======
Mar 15, 2023
- Add `format --pretty` CLI command for formatting feature and meta files for consistent and tidy Gherkin

3.31.1
======
Mar 14, 2023
- Include exception cause in reported javascript errors
- Reload tab completer when meta is reloaded in REPL
- Disable tab completion in REPL when in paste mode